--- a/configs/mnist_basic.cfg
+++ b/configs/mnist_basic.cfg
@@ -1,11 +1,11 @@
-dataset='cifar10'
-epochs=1
-batch_size=8
+dataset='MNIST'
+epochs=25
+batch_size=64
 log_frequency=10
 [darts]
     layers=1
-    input_channels=3
-    input_size=32
+    input_channels=1
+    input_size=28
     n_classes=10
     channels=16
     n_nodes=4
@@ -16,9 +16,9 @@ log_frequency=10
     [[optim]]
         w_lr = 0.025
         w_momentum=0.9
-        w_weight_decay=3e-4
+        w_weight_decay=0
         w_grad_clip=5.0
-        alpha_lr=3e-4
-        alpha_weight_decay=1e-3
+        alpha_lr=1e-3
+        alpha_weight_decay=0
         alpha_beta_1=0.5
         alpha_beta_2=0.999
