--- a/configs/md_basic.cfg
+++ b/configs/md_basic.cfg
@@ -1,8 +1,9 @@
 datasets=MNIST;MNIST-TR
 folder_name='basic_md'
-epochs=15
+epochs=25
 batch_size=64
 log_frequency=10
+seed=0
 [darts]
     layers=1
     input_channels=1
@@ -18,9 +19,9 @@ log_frequency=10
     [[optim]]
         w_lr = 0.025
         w_momentum=0.9
-        w_weight_decay=0.0003
+        w_weight_decay=0.0
         w_grad_clip=5.0
         alpha_lr=1e-3
-        alpha_weight_decay=0.001
+        alpha_weight_decay=0.0
         alpha_beta_1=0.5
         alpha_beta_2=0.999
