MPNAS initial version
Added MPNAS model and RNN controller with REINFORCE optimization (EMA baseline)

--- a/configs/cifar_basic.cfg
+++ b/configs/cifar_basic.cfg
@@ -1,7 +1,9 @@
-dataset='cifar10'
-epochs=1
+datasets='cifar10'
+folder_name='cifar_basic'
+epochs=0
 batch_size=8
 log_frequency=10
+seed=0
 [darts]
     layers=1
     input_channels=3
@@ -13,6 +15,7 @@ log_frequency=10
     stem_multiplier=3
     sampling_mode=gumbel-softmax
     initial_temp=1.0
+    concord_coeff=0.0
     [[optim]]
         w_lr = 0.025
         w_momentum=0.9
