--- a/configs/mnist_basic.cfg
+++ b/configs/mnist_basic.cfg
@@ -1,8 +1,9 @@
-dataset='MNIST'
+datasets='MNIST'
 folder_name='basic_mnist'
 epochs=15
 batch_size=64
 log_frequency=10
+seed=0
 [darts]
     layers=1
     input_channels=1
@@ -12,8 +13,9 @@ log_frequency=10
     n_nodes=4
     unrolled=False
     stem_multiplier=3
-    sampling_mode=gumbel-softmax
+    sampling_mode=softmax
     initial_temp=1.0
+    concord_coeff=0.0
     [[optim]]
         w_lr = 0.025
         w_momentum=0.9
