Added contrastive, temperature annealing, experiment runner

--- a/configs/md_mnist_basic/darts.cfg
+++ b/configs/md_mnist_basic/darts.cfg
@@ -1,6 +1,6 @@
-datasets=MNIST-0
-folder_name='mnist_0'
-epochs=15
+datasets=MNIST-0;MNIST-90;MNIST-180;MNIST-270
+folder_name='mnist'
+epochs=30
 batch_size=64
 log_frequency=10
 seed=0
@@ -15,9 +15,13 @@ seed=0
     stem_multiplier=3
     sampling_mode=gumbel-softmax
     initial_temp=1.0
+    delta_t=-0.026
     concord_coeff=0.0
+    contrastive_coeff=0.0
     [[optim]]
-        w_lr = 0.025
+        eta_lr=0.0  # equal domain weights
+        w_lr=0.025
+        w_lr_min=0.001
         w_momentum=0.9
         w_weight_decay=0.0
         w_grad_clip=5.0
