--- a/configs/md_mnist_basic/darts_retrain.cfg
+++ b/configs/md_mnist_basic/darts_retrain.cfg
@@ -1,10 +1,10 @@
-datasets=MNIST-0
-folder_name='mnist_0'
-epochs=15
+datasets=MNIST-0;MNIST-90;MNIST-180;MNIST-270
+folder_name='mnist'
+epochs=30
 batch_size=64
 log_frequency=10
 seed=0
-architecture_path='searchs/mnist_0/final_architecture.json'
+architecture_path='searchs/mnist/final_architecture.json'
 [darts]
     layers=1
     input_channels=1
@@ -14,7 +14,9 @@ architecture_path='searchs/mnist_0/final_architecture.json'
     n_nodes=4
     stem_multiplier=3
     [[optim]]
+        eta_lr=0.0  # equal domain weights
         w_lr = 0.025
+        w_lr_min=0.001
         w_momentum=0.9
         w_weight_decay=0.0
         w_grad_clip=5.0
