Fixed unroll, added drop path and cutout

--- a/configs/md_mnist_basic/mpnas_retrain.cfg
+++ b/configs/md_mnist_basic/mpnas_retrain.cfg
@@ -2,6 +2,7 @@ datasets=MNIST-0;MNIST-180
 folder_name='mpnas'
 epochs=15
 batch_size=64
+cutout_length=0
 log_frequency=10
 seed=0
 architecture_path='searchs/mpnas/final_architecture.json'
