--- a/configs/md_mnist_basic/darts.cfg
+++ b/configs/md_mnist_basic/darts.cfg
@@ -2,6 +2,7 @@ datasets=MNIST-0;MNIST-90;MNIST-180;MNIST-270
 folder_name='mnist'
 epochs=30
 batch_size=64
+cutout_length=0
 log_frequency=10
 seed=0
 [darts]
@@ -18,6 +19,8 @@ seed=0
     delta_t=-0.026
     concord_coeff=0.0
     contrastive_coeff=0.0
+    drop_path_proba_init=0.0
+    drop_path_proba_delta=0.0
     [[optim]]
         eta_lr=0.0  # equal domain weights
         w_lr=0.025
