--- a/configs/fmnist_basic/darts2.cfg
+++ b/configs/fmnist_basic/darts2.cfg
@@ -1,7 +1,7 @@
-datasets=MNIST-0;MNIST-90;MNIST-180;MNIST-270
-folder_name='mnist'
+datasets=MINI-FMNIST-0;MINI-FMNIST-90
+folder_name='fmnist2'
 epochs=30
-batch_size=8
+batch_size=32
 cutout_length=0
 log_frequency=10
 seed=0
@@ -12,11 +12,11 @@ seed=0
     n_classes=10
     channels=16
     n_nodes=4
-    unrolled=True
+    unrolled=False
     stem_multiplier=3
     sampling_mode=gumbel-softmax
     initial_temp=1.0
-    delta_t=-0.026
+    delta_t=-0.03
     concord_coeff=0.0
     contrastive_coeff=0.0
     drop_path_proba_init=0.0
