--- a/configs/fmnist_basic/darts1.cfg
+++ b/configs/fmnist_basic/darts1.cfg
@@ -1,9 +1,9 @@
-datasets=MNIST-0;MNIST-90;MNIST-180;MNIST-270
-folder_name='mnist'
-epochs=30
-batch_size=8
+datasets=MINI-FMNIST-0
+folder_name='fmnist1'
+epochs=50
+batch_size=16
 cutout_length=0
-log_frequency=10
+log_frequency=15
 seed=0
 [darts]
     layers=3
@@ -12,11 +12,11 @@ seed=0
     n_classes=10
     channels=16
     n_nodes=4
-    unrolled=True
+    unrolled=False
     stem_multiplier=3
     sampling_mode=gumbel-softmax
     initial_temp=1.0
-    delta_t=-0.026
+    delta_t=-0.016
     concord_coeff=0.0
     contrastive_coeff=0.0
     drop_path_proba_init=0.0
