--- a/configs/fmnist_basic/darts4t.cfg
+++ b/configs/fmnist_basic/darts4t.cfg
@@ -1,9 +1,9 @@
-datasets=MNIST-0;MNIST-90;MNIST-180;MNIST-270
-folder_name='mnist'
-epochs=30
-batch_size=8
+datasets=MINI-FMNIST-0;MINI-FMNIST-90;MINI-FMNIST-180;MINI-FMNIST-270
+folder_name='fmnist4t'
+epochs=20
+batch_size=16
 cutout_length=0
-log_frequency=10
+log_frequency=16
 seed=0
 [darts]
     layers=3
@@ -12,13 +12,13 @@ seed=0
     n_classes=10
     channels=16
     n_nodes=4
-    unrolled=True
+    unrolled=False
     stem_multiplier=3
     sampling_mode=gumbel-softmax
     initial_temp=1.0
-    delta_t=-0.026
+    delta_t=-0.016
     concord_coeff=0.0
-    contrastive_coeff=0.0
+    contrastive_coeff=1000.0
     drop_path_proba_init=0.0
     drop_path_proba_delta=0.0
     [[optim]]
@@ -32,3 +32,8 @@ seed=0
         alpha_weight_decay=0.0
         alpha_beta_1=0.5
         alpha_beta_2=0.999
+# 10^6 - random
+# 10^3 - poor
+# 1.0 - good, seed 20 = 231
+# 10e-3 - better = 218      
+# 1e-2 = 218
