--- a/configs/fmnist_basic_exp2/darts10_full.cfg
+++ b/configs/fmnist_basic_exp2/darts10_full.cfg
@@ -1,22 +1,22 @@
-datasets=MNIST-0;MNIST-90;MNIST-180;MNIST-270
-folder_name='mnist'
-epochs=30
-batch_size=8
+datasets = MINI-FMNIST-0+MINI-FMNIST-1+MINI-FMNIST-2+MINI-FMNIST-3+MINI-FMNIST-4+MINI-FMNIST-5+MINI-FMNIST-6+MINI-FMNIST-7+MINI-FMNIST-8+MINI-FMNIST-9
+folder_name='fmnist10_full'
+epochs=100
+batch_size=16
 cutout_length=0
-log_frequency=10
+log_frequency=16
 seed=0
 [darts]
-    layers=3
+    layers=1
     input_channels=1
     input_size=28
     n_classes=10
     channels=16
-    n_nodes=4
-    unrolled=True
+    n_nodes= 4
+    unrolled=False
     stem_multiplier=3
     sampling_mode=gumbel-softmax
     initial_temp=1.0
-    delta_t=-0.026
+    delta_t=-0.008
     concord_coeff=0.0
     contrastive_coeff=0.0
     drop_path_proba_init=0.0
@@ -32,3 +32,8 @@ seed=0
         alpha_weight_decay=0.0
         alpha_beta_1=0.5
         alpha_beta_2=0.999
+# 10^6 - random
+# 10^3 - poor
+# 1.0 - good, seed 20 = 231
+# 10e-3 - better = 218      
+# 1e-2 = 218
