Added common head support

--- a/configs/md_mnist_basic/darts.cfg
+++ b/configs/md_mnist_basic/darts.cfg
@@ -10,6 +10,7 @@ seed=0
     input_channels=1
     input_size=28
     n_classes=10
+    common_head=True
     channels=16
     n_nodes=4
     unrolled=False
