--- a/configs/md_mnist_basic/darts_retrain.cfg
+++ b/configs/md_mnist_basic/darts_retrain.cfg
@@ -11,6 +11,7 @@ architecture_path='searchs/mnist/final_architecture.json'
     input_channels=1
     input_size=28
     n_classes=10
+    common_head=True
     channels=16
     n_nodes=4
     stem_multiplier=3
