--- a/configs/mnist/darts4t.cfg
+++ b/configs/mnist/darts4t.cfg
@@ -21,6 +21,7 @@ seed = 0;13;42
     contrastive_coeff = 0.1
     drop_path_proba_init = 0.0
     drop_path_proba_delta = 0.0
+    common_head = 1
     [[optim]]
         eta_lr = 0.0  # equal domain weights
         w_lr = 0.025
