--- a/configs/mnist/darts4s.cfg
+++ b/configs/mnist/darts4s.cfg
@@ -1,5 +1,5 @@
-datasets = MNIST-0;MNIST-180;MNIST-90
-folder_name = 'mnist_t3'
+datasets = MNIST-0;MNIST-180;MNIST-90;MNIST-270
+folder_name = 'mnist_s4'
 epochs = 100
 batch_size = 16
 cutout_length = 0
@@ -18,7 +18,7 @@ seed = 0;13;42
     initial_temp = 1.0
     delta_t = -0.0
     concord_coeff = 0.0
-    contrastive_coeff = 0.1
+    contrastive_coeff = 0.0
     drop_path_proba_init = 0.0
     drop_path_proba_delta = 0.0
     common_head = 1
