--- a/configs/mnist/darts1.cfg
+++ b/configs/mnist/darts1.cfg
@@ -1,5 +1,5 @@
 datasets = MNIST-0
-folder_name = 'mnist_d2'
+folder_name = 'mnist1'
 epochs = 100
 batch_size = 16
 cutout_length = 0
@@ -12,7 +12,7 @@ seed = 0;13;42
     n_classes = 10
     channels = 16
     n_nodes = 4
-    unrolled = False
+    unrolled = True
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
