--- a/configs/mnist/darts2c.cfg
+++ b/configs/mnist/darts2c.cfg
@@ -12,12 +12,12 @@ seed = 0;13;42
     n_classes = 10
     channels = 16
     n_nodes = 4
-    unrolled = False
+    unrolled = True
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
     delta_t = -0.0
-    concord_coeff = 1.0
+    concord_coeff = 10.0
     contrastive_coeff = 0.0
     drop_path_proba_init = 0.0
     drop_path_proba_delta = 0.0
