--- a/configs/mnist/darts2s.cfg
+++ b/configs/mnist/darts2s.cfg
@@ -1,5 +1,5 @@
-datasets = MNIST-0
-folder_name = 'mnist_d2'
+datasets = MNIST-0;MNIST-180
+folder_name = 'mnist_s2'
 epochs = 100
 batch_size = 16
 cutout_length = 0
@@ -12,7 +12,7 @@ seed = 0;13;42
     n_classes = 10
     channels = 16
     n_nodes = 4
-    unrolled = False
+    unrolled = True
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
