--- a/configs/mnist/darts2t.cfg
+++ b/configs/mnist/darts2t.cfg
@@ -12,7 +12,7 @@ seed = 0;13;42
     n_classes = 10
     channels = 16
     n_nodes = 4
-    unrolled = False
+    unrolled = True
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
