--- a/configs/mnist/darts2c.cfg
+++ b/configs/mnist/darts2c.cfg
@@ -4,20 +4,20 @@ epochs = 100
 batch_size = 16
 cutout_length = 0
 log_frequency = 16
-seed = 0;13;42
+seed = 0#;13;42
 [darts]
     layers = 1
     input_channels = 1
     input_size = 28
     n_classes = 10
-    channels = 16
-    n_nodes = 4
-    unrolled = True
+    channels = 2
+    n_nodes = 16
+    unrolled = False
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
     delta_t = -0.0
-    concord_coeff = 10.0
+    concord_coeff = 1.0
     contrastive_coeff = 0.0
     drop_path_proba_init = 0.0
     drop_path_proba_delta = 0.0
