--- a/configs/mnist/darts2s.cfg
+++ b/configs/mnist/darts2s.cfg
@@ -4,15 +4,15 @@ epochs = 100
 batch_size = 16
 cutout_length = 0
 log_frequency = 16
-seed = 0;13;42
+seed = 0#;13;42
 [darts]
     layers = 1
     input_channels = 1
     input_size = 28
     n_classes = 10
     channels = 16
-    n_nodes = 4
-    unrolled = True
+    n_nodes = 8
+    unrolled = False
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
