--- a/configs/mnist/darts2t.cfg
+++ b/configs/mnist/darts2t.cfg
@@ -10,15 +10,15 @@ seed = 0;13;42
     input_channels = 1
     input_size = 28
     n_classes = 10
-    channels = 16
+    channels = 10
     n_nodes = 4
-    unrolled = True
+    unrolled = False
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
     delta_t = -0.0
     concord_coeff = 0.0
-    contrastive_coeff = 0.1
+    contrastive_coeff = 1e-5
     drop_path_proba_init = 0.0
     drop_path_proba_delta = 0.0
     common_head = 1
