--- a/configs/mnist/darts2f.cfg
+++ b/configs/mnist/darts2f.cfg
@@ -4,7 +4,7 @@ epochs = 100
 batch_size = 16
 cutout_length = 0
 log_frequency = 16
-seed = 0;13;42
+seed = 0#;13;42
 [darts]
     layers = 1
     input_channels = 1
@@ -12,7 +12,7 @@ seed = 0;13;42
     n_classes = 10
     channels = 16
     n_nodes = 4
-    unrolled = True
+    unrolled = False
     stem_multiplier = 3
     sampling_mode = softmax
     initial_temp = 1.0
