--- a/configs/mnist/darts4t.cfg
+++ b/configs/mnist/darts4t.cfg
@@ -4,7 +4,7 @@ epochs = 100
 batch_size = 16
 cutout_length = 0
 log_frequency = 16
-seed = 0;13;42
+seed = 0#;13;42
 [darts]
     layers = 1
     input_channels = 1
@@ -18,7 +18,7 @@ seed = 0;13;42
     initial_temp = 1.0
     delta_t = -0.0
     concord_coeff = 0.0
-    contrastive_coeff = 0.1
+    contrastive_coeff = 10e-5
     drop_path_proba_init = 0.0
     drop_path_proba_delta = 0.0
     common_head = 1
